primer commit desde lap nueva

--- a/LandViewController/public_html/pages/creationFilesPage.jspx
+++ b/LandViewController/public_html/pages/creationFilesPage.jspx
@@ -78,6 +78,7 @@
                                                   shortDesc="idServicio"
                                                   id="TxtIdService"
                                                   visible="false"
+                                                  partialTriggers="BtmnAltPm BtmnPrPm"
                                                   value="#{UserMenuBean.lsUserIdServiceCortes}"
                                                   binding="#{CreationBean.poIdService}">
                                     </af:inputText>
